<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="csi.fhict.org.csi_week_1.MainActivity"
    android:weightSum="12"
    android:orientation="vertical"
    style="@style/normalStyle">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/criminalImage"
        android:layout_weight="4"/>

    <ListView
        style="@style/normalStyle"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:id="@+id/lvCrimes"
        android:layout_weight="5"/>

    <TableLayout
        style="@style/normalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></TableLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2.5"
        android:weightSum="10"
        >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               style="@style/highlightStyle">

                <TextView
                    style="@style/highlightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/tvName"
                    android:layout_marginRight="100dp"
                     />

                <TextView
                    style="@style/highlightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bgName"
                    android:id="@+id/tvBgName"
                     />
            </TableRow>

            <TableRow
                style="@style/normalStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    style="@style/normalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGender"
                    android:layout_marginRight="100dp"
                    android:text="@string/gender"
                     />

                <TextView
                    style="@style/normalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bgGender"
                    android:id="@+id/tvBgGender"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/highlightStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:id="@+id/tvAge"
                    android:layout_marginRight="100dp"
                    style="@style/highlightStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bgAge"
                    android:id="@+id/tvBgAge"
                    style="@style/highlightStyle" />
            </TableRow>

            <TableRow
                style="@style/normalStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    style="@style/normalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bounty"
                    android:id="@+id/tvBounty"
                    android:layout_marginRight="100dp"
                     />

                <TextView
                    style="@style/normalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bgBounty"
                    android:id="@+id/tvBgBounty"
                     />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:id="@+id/scrollView"
            android:fillViewport="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:id="@+id/tvDetails"
                style="@style/highlightStyle"
                />
        </ScrollView>

        <Button
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:id="@+id/btnReport"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>
