<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/normalStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.fhict.org.csi_week_1.ReportActivity"
    tools:showIn="@layout/activity_report"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <Button
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:id="@+id/btnPicture"
            android:gravity="left"
             />

        <Switch
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SCA"
            android:id="@+id/switch1" />

        <Button
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGPS"
            android:text="@string/gps"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:background="@drawable/mybadguy"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1">

        <Button
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:id="@+id/btnCall"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="50dp"
           />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/btnBack"
            android:layout_marginRight="130dp"
            android:layout_marginLeft="10dp"
           />

        <Button
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/btnSend"
             />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <TextView
            style="@style/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="New Text"
            android:id="@+id/tvLoc" />
    </LinearLayout>
</LinearLayout>
